# ubntai

./: CMakeLists.txt  README.md  Urls.h  User.db  UserDatabase.db  ab.db  about.cpp  another.db  asistant.cpp  asistant.h  clickablelabel.cpp  clickablelabel.h  database.db  db.cpp  db.h  flowlayout.cpp  flowlayout.h  installation.cpp  installation.h  loading.cpp  loading.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  modelconnection.cpp  modelconnection.h  networking.cpp  networking.h  newUser.db  pastqueries.cpp  pastqueries.h  request.h  resource.qrc  snapcraft.yaml  troubleshoot.cpp  troubleshoot.h  urls.cpp  urls.h  user.cpp  (+6 more)
backend/: settings.py
